--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -35,8 +35,31 @@
     color: white !important;
  }
 
- .nav-link:hover{
+ .nav-link{
+  position: relative;
+  transition: .3s ease-out all;
+ }
+
+ .nav-link:after{
+  content: '';
+  position: absolute;
+  bottom: 0;
+  transform: translateX(-50%);
+  left: 50%;
+  display: inline-block;
+  width: 0%;
+  height: 1px;
+  background: var(--main);
+  transition: .3s ease-out all;
+ }
+
+ .nav-link:hover:after{
+  width: 70%;
     color: #4f5d75 !important;
+ }
+
+ .nav-link:hover{
+  color: #4f5d75 !important;
  }
 
 .carousel-inner{
@@ -59,4 +82,56 @@
 
 .footer{
     color: #4f5d75 !important;
+}
+
+.btn-main{
+  color: white !important;
+  background: var(--main);
+  flex: 0 0 auto; /* Elemento flessibile che non cresce né si riduce */
+  margin-top: auto; /* Spinge il pulsante verso il fondo della card */
+}
+
+.btn{
+  transition: .3s all ease-out;
+}
+
+.btn:hover{
+  background: var(--white) !important;
+  color: var(--main) !important;
+  border: 1px solid var(--main) !important;
+}
+
+
+.card {
+  width: 18rem;
+  height: 300px; /* Altezza fissa della card */
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.card-body {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+a{
+  text-decoration: none;
+  color: white;
+}
+
+.text-bg-custom{
+  background-color: var(--main);
+  transition: all .3s ease-out;
+  position: relative;
+}
+
+.text-bg-custom:hover{
+  background-color: var(--white);
+  border: 1px solid var(--main);
+  color: var(--main);
+  transform: scale(1.2);
+  left: 5px;
 }
