--- a/resources/css/masthead.css
+++ b/resources/css/masthead.css
@@ -1,8 +1,10 @@
 .masthead {
-    height: 100vh;
-    min-height: 500px;
-    background-image: url('../images/headimage.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
+  height: 100vh;
+  min-height: 500px;
+  background: 
+      linear-gradient(94deg, rgba(0, 0, 0, 0.815) 36%, rgba(214, 214, 214, 0) 67%, rgba(214, 214, 214, 0) 100%),
+      url('../images/headimage.jpg');
+  background-size: cover; /* O "contain" se vuoi adattare l'immagine in base alle dimensioni del contenitore */
+  background-position: center;
+  background-repeat: no-repeat;
+}
