--- a/resources/css/navbar.css
+++ b/resources/css/navbar.css
@@ -1,10 +1,14 @@
 .navbar {
     background-color: var(--orange);
+    border-radius: 25px;
+   margin-top: 30px;
+   max-width: 80%;
+   margin: 20px auto;
     
 }
 
 .dropdown-menu {
-    background-color: #ef8254be;
+    background-color:var(--orange);
     margin-top: 10;
 }
 
