--- a/resources/css/masthead.css
+++ b/resources/css/masthead.css
@@ -3,7 +3,7 @@
   min-height: 500px;
   background: 
       linear-gradient(94deg, rgba(0, 0, 0, 0.815) 36%, rgba(214, 214, 214, 0) 67%, rgba(214, 214, 214, 0) 100%),
-      url('../images/headimage.jpg');
+      url('/public/images/headimage.jpg');
   background-size: cover; /* O "contain" se vuoi adattare l'immagine in base alle dimensioni del contenitore */
   background-position: center;
   background-repeat: no-repeat;
