zitti fin quando funziona

--- a/resources/css/navbar.css
+++ b/resources/css/navbar.css
@@ -60,3 +60,9 @@ nav{
 .bg-main{
   background-color: var(--main) !important;
 }
+
+/*  -------------  */
+
+.dropdown:hover > .dropdown-menu{
+  display: block;
+}
