sistemata sezione articoli e aggiunte animazioni

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,6 @@
 @import 'bootstrap';
 @import './masthead.css';
+@import './masthead2.css';
 @import './style.css';
 @import './navbar.css';
+@import 'animate.css';
