--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,6 +11,11 @@
     font-optical-sizing: auto;
   }
 
+  .titolomedio{
+    font-family: "Space Grotesk", sans-serif;
+    font-size: 1.2rem;
+  }
+
   *{
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
@@ -77,20 +82,24 @@ footer{
 }
 
 .card {
-  width: 18rem;
-  height: 300px; /* Altezza fissa della card */
   display: flex;
-  flex-direction: column;
-  overflow: hidden;
-  
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 10px 14px rgba(0, 0, 0, 0.1);
 }
 
 .card-body {
-  flex: 1;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   overflow: hidden;
 }
+
 
 a{
   text-decoration: none;
