iniziata user story 5

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -182,3 +182,11 @@ a{
   background: #dbaf9d;
   color: white;
 }
+
+.img-preview{
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height:120px;
+  width: 120px;
+}
