aggiunta questione admin

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -162,6 +162,10 @@ a{
 }
 
 .option:nth-child(2) > .bg{
+  background-image: url('/public/images/bin.jpg');
+}
+
+.option:nth-child(3) > .bg{
   background-image: url('/public/images/users-icon.png');
 }
 
