--- a/resources/css/shower.css
+++ b/resources/css/shower.css
@@ -13,8 +13,8 @@
     border-radius: 20px;
     height: 40vh !important;
     overflow: hidden;
-    background-color: skyblue;
-    margin: 0 15px 15px 15px;
+    margin: 0 auto 15px auto;
+    max-width: 1000px;
 }
 
 .shower > .body{
@@ -42,3 +42,18 @@
     width: 100%;
     background-color: var(--main);
 }
+
+.frecce{
+   
+    border-radius: 50%;
+    background-color: var(--main);
+}
+  
+  .frecce::before {
+    content: '';
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    
+  }
+  
