cambio colore footer, cambio navbar e aggiunta bottone ultimi annunci nella home

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,6 +4,7 @@
     --orange: #F75C03;
     --yellow: #F1C40F;
     --sfondo: #2275a53b;
+    --footer: #576066;
   }
 
   h1,p, .nav-link, .navbar-brand, .btn{
@@ -47,7 +48,7 @@
 }
 
 footer{
-  background-color: var(--main) !important;
+  background-color: var(--footer) !important;
   width: 100%;
 }
 .footer{
