--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -195,3 +195,16 @@ a{
   height:120px;
   width: 120px;
 }
+
+.presentation-h2{
+  color: var(--main); /* Utilizza il colore principale */
+  font-size: 2.5em; /* Dimensione del font più grande */
+  text-align: center; /* Allineamento del testo al centro */
+  padding: 10px; /* Aggiunge un po' di spazio interno */
+  border: 2px solid var(--main); /* Bordo con il colore principale */
+  background-color: rgba(52, 152, 219, 0.1); /* Sfondo leggero usando il colore principale */
+  border-radius: 10px; /* Angoli arrotondati */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Aggiunge un'ombra */
+  text-align: center;
+  min-width: 60%;
+}
