aggiunzione di elementi grafici front end(max)

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -4,7 +4,7 @@
     --orange: #F75C03;
     --yellow: #F1C40F;
     --sfondo: #2275a53b;
-    --footer: #576066;
+    --footer: #0e2a3c;
   }
 
   .arrow-container {
