--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -247,7 +247,8 @@ a{
 }
 
 .categoria{
-  height: 350px;
+  width: 180px;
+  height: 180px;
   border-radius: 100%;
   display: flex;
   justify-content: center;
@@ -262,8 +263,9 @@ a{
 .categoria > h2{
   color: var(--main);
   background: white;
-  border-radius: 10px;
+  border-radius: 15px;
   padding: 10px;
+  font-size: 1.5em;
 }
 
 .categoria:nth-child(1){
