sistemate card sezione home

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,7 +3,7 @@
     --white: #ffffff;
     --orange: #F75C03;
     --yellow: #F1C40F;
-    --sfondo: #2275a53b;
+    --sfondo: #d9e7f036;
     --footer: #0e2a3c;
   
   }
@@ -27,7 +27,7 @@
     min-height: 100vh;
     position: relative;
     padding-bottom: 150px;
-    background-color: var(--white);
+    background-color: var(--sfondo);
   }
 
 .carousel-inner{
@@ -99,6 +99,7 @@ footer{
 .card {
         text-align: center;
         box-shadow: 5px 5px 15px;
+      
 }
 
 .image-container {
@@ -120,14 +121,15 @@ footer{
 }
 
 .card-img-top {
-  border-radius: 50%;
-  width: 200px; /* Imposta la dimensione desiderata */
-  height: 200px; /* Imposta la dimensione desiderata */
+  
+  width: 320px; /* Imposta la dimensione desiderata */
+  height: 160px; /* Imposta la dimensione desiderata */
   object-fit: cover;
-  margin: 0 auto;
+  margin-top: 10px;
+ 
 }
 
-.card-img-top {
+.cartateam {
   border-radius: 50%;
         width: 200px; /* Imposta la dimensione desiderata */
         height: 200px; /* Imposta la dimensione desiderata */
@@ -135,13 +137,15 @@ footer{
         margin: 0 auto;
       }
 
-      .card-title {
-        margin-top: 2.5rem;
+.card-title {
+        margin-top: 1rem;
         
     }
 
 .card-body {
   display: flex;
+  height: 300px;
+  width: 400px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
