--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -287,3 +287,23 @@ a{
 .dropdown-menu{
   min-width: 0;
 }
+
+.bg-success{
+  color: white !important;
+}
+
+.bg-danger{
+  color: white !important;
+}
+
+.bg-danger:hover{
+  color: red !important;
+  background: white !important;
+  border: 1px red solid !important;
+}
+
+.bg-success:hover{
+  color: green !important;
+  background: white !important;
+  border: 1px green solid !important;
+}
